Change font to sans-serif for entire page. Rearrange button order Fix 'Ugly' and 'Not Ugly' button so they don't generate a new color Add script to store a vote on whether the color is ugly or not for later ranking use

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,10 @@
     font-size: 16px;
   }
 
+body {
+  font-family: sans-serif;
+}
+
   
   /*
  * This is a manifest file that'll be compiled into application.css.
