Remove color box dimension override

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
     </form>
   </div>
 
-  <div class="color-box" style="background-color: <%= @hex_color %>; width: 200px; height: 200px; margin: 20px auto;"></div>
+  <div class="color-box" style="background-color: <%= @hex_color %>;"></div>
 
   <p style="text-align:center">Color Code: <%= @hex_color %></p>
 
