--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,9 +16,24 @@
     font-size: 16px;
   }
 
+  .sortable-list {
+    display: flex;
+    flex-direction: column; /* Keeps items in a column */
+    gap: 10px;
+    align-items: center;  /* Centers list items */
+  }
+  
+  .sortable-list li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+
 body {
   font-family: sans-serif;
 }
+
 
   
   /*
