--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,31 +4,31 @@
     border: 2px solid black;
     margin: 20px auto;
     display: block;
-  }
-  
-  .center-text {
-    text-align: center;
-  }
-  
-  button {
-    margin-top: 10px;
-    padding: 8px 16px;
-    font-size: 16px;
-  }
+}
 
-  .sortable-list {
-    display: flex;
-    flex-direction: column; /* Keeps items in a column */
-    gap: 10px;
-    align-items: center;  /* Centers list items */
-  }
-  
-  .sortable-list li {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+.center-text {
+  text-align: center;
+}
+
+button {
+  margin-top: 10px;
+  padding: 8px 16px;
+  font-size: 16px;
+}
+
+.sortable-list {
+  display: flex;
+  flex-direction: column; /* Keeps items in a column */
+  gap: 10px;
+  align-items: center;  /* Centers list items */
+}
+
+/* .sortable-list li centers the color_vote.position numbers */
+.sortable-list li { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 body {
   font-family: sans-serif;
