--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,8 @@
-.color-box {
-    width: 200px;
-    height: 100px;
-    border: 2px solid black;
+.main-color-box {
+    width: 300px;
+    height: 205px;
+    border: 1px solid black;
+    border-radius: 15px;
     margin: 20px auto;
     display: block;
 }
@@ -11,16 +12,21 @@
 }
 
 button {
-  margin-top: 10px;
-  padding: 8px 16px;
+  margin-top: 5px;
+  margin-left: 2px;
+  margin-right: 2px;
+  padding: 10px 16px;
   font-size: 16px;
+  border-radius: 15px;
+  border: 1px solid #555555;
 }
 
 .sortable-list {
   display: flex;
   flex-direction: column; /* Keeps items in a column */
-  gap: 10px;
+  gap: 0px;
   align-items: center;  /* Centers list items */
+  border-radius: 5px;
 }
 
 /* .sortable-list li centers the color_vote.position numbers */
@@ -32,6 +38,7 @@ button {
 
 body {
   font-family: sans-serif;
+  background-color: #E8E8E8
 }
 
 
